@@ -4,31 +4,24 @@ import cv.pn.processmanagement.business.atorRequest.AtorRequestRepository;
 import cv.pn.processmanagement.business.atorRequest.CreateAtorRequestDto;
 import cv.pn.processmanagement.business.empressaRequest.EmpresaRequest;
 import cv.pn.processmanagement.business.empressaRequest.services.IEmpresaService;
-import cv.pn.processmanagement.business.fileRequest.FileRequest;
-import cv.pn.processmanagement.business.fileRequest.FileRequestDto;
-import cv.pn.processmanagement.business.pessoaRequest.PessoaDto;
 import cv.pn.processmanagement.business.pessoaRequest.PessoaRequest;
 import cv.pn.processmanagement.business.pessoaRequest.services.IPessoaRequestService;
 import cv.pn.processmanagement.business.processRequest.ProcessRepository;
 import cv.pn.processmanagement.business.processRequest.ProcessRequest;
-import cv.pn.processmanagement.enums.ActorsCharacteristics;
-import cv.pn.processmanagement.enums.PersonType;
 import cv.pn.processmanagement.utilities.APIResponse;
 import cv.pn.processmanagement.utilities.MessageState;
 import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Service;
-import javax.persistence.EntityNotFoundException;
 import javax.transaction.Transactional;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 
 @Service
 public class AtorRequestService implements IAtorRequestService {
 
 
-    private static final int MIN_DESC_CHARS = 10;
     private final AtorRequestRepository atorRequestRepository;
 
     private final ProcessRepository processRepository;
@@ -53,16 +46,55 @@ public class AtorRequestService implements IAtorRequestService {
 
         try {
 
+
             List<AtorRequest>  actor =  atoresDtos
                     .stream()
                     .map(atores -> {
 
-                        AtorRequest ator = new AtorRequest();
-                        BeanUtils.copyProperties(atores, ator);
+                            AtorRequest ator = new AtorRequest();
+                            BeanUtils.copyProperties(atores, ator, "id", "processRequest", "pessoa", "empresa");
 
-                        ator.setUserCreate("SYSTEM");
+                            ator.setUserCreate("SYSTEM");
 
-                        APIResponse pResp = iPessoaRequestService.createPessoa(atores.getPessoa());
+                            ProcessRequest process = processRepository.findById(processRequest)
+                                    .orElseThrow(() -> new javax.persistence.EntityNotFoundException("Processo com ID " + processRequest + " não encontrado"));
+                            ator.setProcessRequest(process);
+
+
+
+                        // Se veio PESSOA, salva e associa
+                        if (atores.getPessoa() != null) {
+                                APIResponse pResp = iPessoaRequestService.createPessoa(atores.getPessoa());
+                                if (pResp == null || !Boolean.TRUE.equals(pResp.getStatus())
+                                        || pResp.getDetails() == null || pResp.getDetails().isEmpty()
+                                        || !(pResp.getDetails().get(0) instanceof PessoaRequest)) {
+                                    throw new IllegalStateException("Falha ao salvar pessoa do ator.");
+                            }
+                                PessoaRequest pessoa = (PessoaRequest) pResp.getDetails().get(0);
+                                ator.setPessoaRequest(pessoa);
+                        }
+
+                        // Se veio EMPRESA, salva e associa
+                        if (atores.getEmpresa() != null) {
+                                APIResponse eResp = iEmpresaService.createEmpresa(atores.getEmpresa());
+                                if (eResp == null || !Boolean.TRUE.equals(eResp.getStatus())
+                                        || eResp.getDetails() == null || eResp.getDetails().isEmpty()
+                                        || !(eResp.getDetails().get(0) instanceof EmpresaRequest)) {
+                                    throw new IllegalStateException("Falha ao salvar empresa do ator.");
+                            }
+                                EmpresaRequest empresa = (EmpresaRequest) eResp.getDetails().get(0);
+                                ator.setEmpresaRequest(empresa);
+                        }
+
+                        if (atores.getPessoa() == null && atores.getEmpresa() == null) {
+
+                                throw new IllegalStateException("Envie 'pessoa' ou 'empresa' para o ator.");
+                        }
+
+                        // Salva o ATOR já com FKs definidas
+                            atorRequestRepository.saveAndFlush(ator);
+
+                        /*APIResponse pResp = iPessoaRequestService.createPessoa(atores.getPessoa());
 
                         PessoaRequest pessoa = (PessoaRequest) pResp.getDetails().get(0);
                         ator.setPessoaRequest(pessoa);
@@ -74,9 +106,11 @@ public class AtorRequestService implements IAtorRequestService {
 
                         atorRequestRepository.saveAndFlush(ator);
 
+                        return ator;*/
+
                         return ator;
 
-                    }).collect(Collectors.toList());
+                    }).toList();
 
             return new APIResponse.buildAPIResponse()
                     .setStatus(true)
